# Core.SteamAudio

./: .gitignore  CMakeLists.txt  Directory.Build.props  LICENSE  README.md  SampleComponent.cpp  SampleComponent.h  SteamAudio.cpp  SteamAudio.h  SteamAudioDefs.h  SteamSoundListener.cpp  SteamSoundListener.h  SteamSoundMesh.cpp  SteamSoundMesh.h  SteamSoundSource.cpp  SteamSoundSource.h  _Plugin.cpp  _Plugin.h  ci_build.sh
.github/workflows/: build.yml
CSharp/: Plugin.csproj  Plugin.i
